en/v2026.11.0/_sources/data_dictionaries/codes_and_labels.rst.txt

=====================================================================================================
PUDL Code Metadata
=====================================================================================================
The following tables map from codes used in raw data to labels used in the PUDL database.
Also included is a table of non-standard codes that are mapped to canonical, standardized codes.


.. _core_eia__codes_averaging_periods_:

---------------------------------------------------------------
core_eia__codes_averaging_periods
---------------------------------------------------------------

Code table containing descriptions of categorical codes for the averaging period specified by emissions statutes and regulations for the EIA 860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_averaging_periods.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_balancing_authorities_:

---------------------------------------------------------------
core_eia__codes_balancing_authorities
---------------------------------------------------------------

Code table containing descriptions of categorical codes for balancing authorities in EIA 860, EIA 923, and EIA 930.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_balancing_authorities.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - CA
    - CISO
  * - CI
    - CISO
  * - CP
    - CPLE
  * - DU
    - DUK
  * - EP
    - EPE
  * - ER
    - ERCO
  * - IP
    - IPCO
  * - IS
    - ISNE
  * - MI
    - MISO
  * - NE
    - NEVP
  * - NVE
    - NEVP
  * - NY
    - NYIS
  * - PJ
    - PJM
  * - PS
    - PSCO
  * - SE
    - SEC
  * - SR
    - SRP
  * - SW
    - SWPP
  * - TEN
    - TVA
  * - TEX
    - ERCO
  * - TIC
    - TIDC
  * - TID
    - TIDC


.. _core_eia__codes_boiler_generator_assn_types_:

---------------------------------------------------------------
core_eia__codes_boiler_generator_assn_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for boiler-generator associations in the EIA 860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_boiler_generator_assn_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - t
    - T
  * - a
    - A


.. _core_eia__codes_boiler_status_:

---------------------------------------------------------------
core_eia__codes_boiler_status
---------------------------------------------------------------

Code table containing descriptions of categorical codes for boiler status in the EIA 860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_boiler_status.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - op
    - OP
  * - re
    - RE
  * - OA
    - OP
  * - IP
    - CN
  * - R
    - RE
  * - P
    - PL
  * - V
    - CO
  * - ts
    - TS
  * - os
    - OS


.. _core_eia__codes_boiler_types_:

---------------------------------------------------------------
core_eia__codes_boiler_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for boiler regulatory types in the EIA 860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_boiler_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_coalmine_types_:

---------------------------------------------------------------
core_eia__codes_coalmine_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for coalmines reported as fuel sources in the EIA-923.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_coalmine_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - p
    - P
  * - U/S
    - US
  * - S/U
    - SU
  * - Su
    - S


.. _core_eia__codes_contract_types_:

---------------------------------------------------------------
core_eia__codes_contract_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for fuel supply contracts reported in EIA-923.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_contract_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - N
    - NC


.. _core_eia__codes_cooling_system_types_:

---------------------------------------------------------------
core_eia__codes_cooling_system_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for cooling systems.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_cooling_system_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - RECIRCULATING WITH INDUCED DRAFT COOLING TOWER
    - RI
  * - DRY (AIR) COOLING SYSTEM
    - DC
  * - ONCE THROUGH WITHOUT COOLING POND(S) OR CANAL(S)
    - ON
  * - RECIRCULATING WITH COOLING PONDS
    - RC
  * - RECIRCULATING
    - R
  * - RECIRCULATING WITH NATURAL DRAFT COOLING TOWER
    - RN
  * - ONCE THROUGH
    - O
  * - ONCE THROUGH WITH COOLING PONDS
    - OC
  * - HYBRID: RECIRCULATING WITH INDUCED DRAFT COOLING TOWER(S) WITH DRY COOLING
    - HRI
  * - ONCE THROUGH AND RECIRCULATING
    - O + R
  * - RECIRCULATING WITH FORCED DRAFT COOLING TOWER
    - RF
  * - HYBRID (DRY AND WET COOLING)
    - H
  * - OTHER - SPECIFY IN FOOTNOTE
    - OT
  * - HYBRID: RECIRCULATING WITH FORCED DRAFT COOLING TOWER(S) WITH DRY COOLING
    - HRF


.. _core_eia__codes_cooling_tower_types_:

---------------------------------------------------------------
core_eia__codes_cooling_tower_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for cooling towers.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_cooling_tower_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_cooling_water_sources_:

---------------------------------------------------------------
core_eia__codes_cooling_water_sources
---------------------------------------------------------------

Code table containing descriptions of categorical codes for cooling water sources in EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_cooling_water_sources.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_cooling_water_types_:

---------------------------------------------------------------
core_eia__codes_cooling_water_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for cooling water.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_cooling_water_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_emission_control_equipment_types_:

---------------------------------------------------------------
core_eia__codes_emission_control_equipment_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for emissions control equipment installed on a boiler.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_emission_control_equipment_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - SR-2
    - SR
  * - sn
    - SN
  * - LN
    - LNB
  * - DP
    - DSI
  * - SNCR
    - SN


.. _core_eia__codes_energy_sources_:

---------------------------------------------------------------
core_eia__codes_energy_sources
---------------------------------------------------------------

Code table containing descriptions of categorical codes for energy sources reported to EIA.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_energy_sources.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - BL
    - BLQ
  * - HPS
    - WAT
  * - ng
    - NG
  * - WOC
    - WC
  * - OW
    - WO
  * - WT
    - WND
  * - H2
    - OG
  * - OOG
    - OG
  * - Sun
    - SUN
  * - sub
    - SUB
  * - PV
    - SUN


.. _core_eia__codes_environmental_equipment_manufacturers_:

---------------------------------------------------------------
core_eia__codes_environmental_equipment_manufacturers
---------------------------------------------------------------

Code table containing descriptions of categorical codes for manufacturers of boilers and environmental control equipment in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_environmental_equipment_manufacturers.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_firing_types_:

---------------------------------------------------------------
core_eia__codes_firing_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for boiler firing types in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_firing_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - AF
    - VF
  * - CF
    - TF
  * - FF
    - WF
  * - OF
    - WF
  * - RF
    - WF
  * - SF
    - WF


.. _core_eia__codes_fuel_transportation_modes_:

---------------------------------------------------------------
core_eia__codes_fuel_transportation_modes
---------------------------------------------------------------

Code table containing descriptions of categorical codes for fuel transportation modes reported in the EIA-860 and EIA-923.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_fuel_transportation_modes.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - TK
    - TR
  * - tk
    - TR
  * - tr
    - TR
  * - WA
    - WT
  * - wa
    - WT
  * - CV
    - TC
  * - cv
    - TC
  * - rr
    - RR
  * - pl
    - PL
  * - rv
    - RV
  * - RT
    - TR


.. _core_eia__codes_fuel_types_agg_:

---------------------------------------------------------------
core_eia__codes_fuel_types_agg
---------------------------------------------------------------

Code table containing descriptions of categorical codes for aggregated fuel types used in the Annual Energy Review or Monthly Energy Review.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_fuel_types_agg.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_mercury_compliance_strategies_:

---------------------------------------------------------------
core_eia__codes_mercury_compliance_strategies
---------------------------------------------------------------

Code table containing descriptions of categorical codes for compliance strategies used to control mercury in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_mercury_compliance_strategies.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_momentary_interruptions_:

---------------------------------------------------------------
core_eia__codes_momentary_interruptions
---------------------------------------------------------------

Code table containing descriptions of categorical codes for utility definitions of momentary service interruptions.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_momentary_interruptions.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - 5
    - F


.. _core_eia__codes_nox_compliance_strategies_:

---------------------------------------------------------------
core_eia__codes_nox_compliance_strategies
---------------------------------------------------------------

Code table containing descriptions of categorical codes for compliance strategies used to control nitrogen oxide in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_nox_compliance_strategies.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - H2
    - H2O
  * - NH
    - NH3
  * - ST
    - STM
  * - ln
    - LN


.. _core_eia__codes_nox_control_status_:

---------------------------------------------------------------
core_eia__codes_nox_control_status
---------------------------------------------------------------

Code table containing descriptions of categorical codes for the operational status of nitrogen oxide control units associated with boilers in the EIA-860 data.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_nox_control_status.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_nox_units_:

---------------------------------------------------------------
core_eia__codes_nox_units
---------------------------------------------------------------

Code table containing descriptions of categorical codes for units of measurement for nitrogen oxide in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_nox_units.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_operational_status_:

---------------------------------------------------------------
core_eia__codes_operational_status
---------------------------------------------------------------

Code table containing descriptions of categorical codes for operational status reported to EIA.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_operational_status.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - (L) Regulatory approvals pending. Not under construction
    - L
  * - (OA) Out of service but expected to return to service in next calendar year
    - OA
  * - (OP) Operating
    - OP
  * - (OS) Out of service and NOT expected to return to service in next calendar year
    - OS
  * - (OT) Other
    - OT
  * - (P) Planned for installation, but regulatory approvals not initiated
    - P
  * - (SB) Standby/Backup: available for service but not normally used
    - SB
  * - (T) Regulatory approvals received. Not under construction
    - T
  * - (TS) Construction complete, but not yet in commercial operation
    - TS
  * - (U) Under construction, less than or equal to 50 percent complete
    - U
  * - (V) Under construction, more than 50 percent complete
    - V
  * - BU
    - SB


.. _core_eia__codes_particulate_compliance_strategies_:

---------------------------------------------------------------
core_eia__codes_particulate_compliance_strategies
---------------------------------------------------------------

Code table containing descriptions of categorical codes for compliance strategies used to control particulate matter in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_particulate_compliance_strategies.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_particulate_units_:

---------------------------------------------------------------
core_eia__codes_particulate_units
---------------------------------------------------------------

Code table containing descriptions of categorical codes for units of measurement for particulate matter in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_particulate_units.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - DP
    - PB


.. _core_eia__codes_prime_movers_:

---------------------------------------------------------------
core_eia__codes_prime_movers
---------------------------------------------------------------

Code table containing descriptions of categorical codes for prime movers reported in the EIA-860 and EIA-923.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_prime_movers.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - ic
    - IC
  * - WY
    - WT


.. _core_eia__codes_regulations_:

---------------------------------------------------------------
core_eia__codes_regulations
---------------------------------------------------------------

Code table containing descriptions of categorical codes for levels of statutes and codes under which boilers operate in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_regulations.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - St
    - ST


.. _core_eia__codes_reporting_frequencies_:

---------------------------------------------------------------
core_eia__codes_reporting_frequencies
---------------------------------------------------------------

Code table containing descriptions of categorical codes for the reporting frequencies used by plants in the EIA-923.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_reporting_frequencies.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_sector_consolidated_:

---------------------------------------------------------------
core_eia__codes_sector_consolidated
---------------------------------------------------------------

Code table containing descriptions of categorical codes for EIA consolidated NAICS sectors.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_sector_consolidated.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_so2_compliance_strategies_:

---------------------------------------------------------------
core_eia__codes_so2_compliance_strategies
---------------------------------------------------------------

Code table containing descriptions of categorical codes for compliance strategies used to control sulfur dioxide in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_so2_compliance_strategies.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - NC
    - NP


.. _core_eia__codes_so2_units_:

---------------------------------------------------------------
core_eia__codes_so2_units
---------------------------------------------------------------

Code table containing descriptions of categorical codes for units of measurement for sulfur dioxide in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_so2_units.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_sorbent_types_:

---------------------------------------------------------------
core_eia__codes_sorbent_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for flue gas desulfurization sorbent types used in EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_sorbent_types.csv
  :header-rows: 1
  :widths: auto


.. list-table:: Fixed Codes
  :widths: auto
  :header-rows: 1

  * - **Non Standard Code**
    - **Standard Code**
  * - CS
    - CSH
  * - CE
    - CEF


.. _core_eia__codes_steam_plant_types_:

---------------------------------------------------------------
core_eia__codes_steam_plant_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for steam plants in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_steam_plant_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_storage_enclosure_types_:

---------------------------------------------------------------
core_eia__codes_storage_enclosure_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for energy storage enclosures.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_storage_enclosure_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_storage_technology_types_:

---------------------------------------------------------------
core_eia__codes_storage_technology_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for energy storage technologies.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_storage_technology_types.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_wet_dry_bottom_:

---------------------------------------------------------------
core_eia__codes_wet_dry_bottom
---------------------------------------------------------------

Code table containing descriptions of categorical codes for boiler bottoms in the EIA-860.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_wet_dry_bottom.csv
  :header-rows: 1
  :widths: auto



.. _core_eia__codes_wind_quality_class_:

---------------------------------------------------------------
core_eia__codes_wind_quality_class
---------------------------------------------------------------

Code table containing descriptions of categorical codes for wind quality classes.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_eia__codes_wind_quality_class.csv
  :header-rows: 1
  :widths: auto



.. _core_ferc1__codes_power_purchase_types_:

---------------------------------------------------------------
core_ferc1__codes_power_purchase_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for electric power purchase types.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_ferc1__codes_power_purchase_types.csv
  :header-rows: 1
  :widths: auto



.. _core_pudl__codes_data_maturities_:

---------------------------------------------------------------
core_pudl__codes_data_maturities
---------------------------------------------------------------

Code table containing descriptions of categorical codes for maturity levels of data records. Some data sources report less-than-final data. PUDL sometimes includes this data, but use at your own risk.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_pudl__codes_data_maturities.csv
  :header-rows: 1
  :widths: auto



.. _core_rus__codes_fuel_types_:

---------------------------------------------------------------
core_rus__codes_fuel_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for fuel types in RUS.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_rus__codes_fuel_types.csv
  :header-rows: 1
  :widths: auto



.. _core_rus__codes_investment_types_:

---------------------------------------------------------------
core_rus__codes_investment_types
---------------------------------------------------------------

Code table containing descriptions of categorical codes for investment types.

.. csv-table:: Code Mappings
  :file: /data_dictionaries/code_csvs/core_rus__codes_investment_types.csv
  :header-rows: 1
  :widths: auto

